# Parallel-MatrixDeterminant

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
matrices/: matrix10.txt  matrix11.txt  matrix12.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrix5.txt  matrix6.txt  matrix7.txt  matrix8.txt  matrix9.txt
src/: determinant.h  main.cpp  matrix.cpp
src/determinant/: determinant.cpp  determinant.h
src/matrix/: matrix.cpp  matrix.h
tests/: tests.cpp
